--- a/idea1.html
+++ b/idea1.html
@@ -352,7 +352,50 @@ display: none;
 </div>
 
 
-<p>Idea #1</p>
+<p><strong><span style="font-size:2em;">Idea #1</span></strong></p>
+<p><strong><span style="font-size:1.5em;">1) Research
+Question</span></strong></p>
+<p>How do the number/type of roads/factories/oil wells in an area impact
+the number of air quality and asthma/lung health issues? I want to
+explore if more factories in an area coincides with more lung health
+issues and the same with more roads and oil wells in the area. I also
+want to see if an increase in factories results in worse air quality, as
+well as the same process with roads and oil wells. I am thinking of
+confining this research to Pennsylvania as it is easier to find county
+by county data if you focus on one state and I feel that state by state
+data is too broad for my idea.</p>
+<p><strong><span style="font-size:1.5em;"> 2) Data
+source</span></strong></p>
+<p><em><span style="font-size:1.1em;"> a) With details about how you
+will get the data</span></em></p>
+<p><em><span style="font-size:1.1em;"> b) What variables the dataset has
+or you will create</span></em></p>
+<p><em><span style="font-size:1.1em;"> c) This can get pretty long,
+which is fine!</span></em></p>
+<p>I plan to use data about the road systems such as the miles of road
+in each state, broken down by rural/urban, interstate/not. This data
+comes from the US Department of Transportation Federal Highway
+Administration and is state by state. I found detailed road information
+for PA cities.</p>
+<p>I found data from the US Census regarding the types and number of
+each type of business in every county of each US state. This data is
+available from 2002 to 2022.</p>
+<p>I have found data through the Center for Disease Control that
+supplies the number and percentage of people with asthma in each state
+from 1999 to 2020. I have also found data from Pennsylvania Commonwealth
+detailing the percentage of students who have asthma by county.</p>
+<p>I found data showing how many oil and gas wells have been drilled in
+each county of Pennsylvania and it can be displayed by whatever dates
+you want to search for. This data is from the Pennsylvania Department of
+Environmental Protection.</p>
+<p><strong><span style="font-size:1.5em;">3) What you will do with the
+data, EDA, model specification.</span></strong></p>
+<p>I want to create heat maps with the amount of roads per county, oil
+wells and factories. I would also break this down by population and land
+size as well. I would repeat the same process with number of people with
+lung health issues. I would try to create a model that predicted the
+number/percentage of people with lung issues/asthma based on roads,
+factories, air quality and oil/gas wells.</p>
 
 
 
